<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="generalui_category">General UI</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="navigation_category">Navigation</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="system_category">System</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="animations_category">Animations</string>
    <string name="dirtytweaks_dialog_title">Help Us, Help You!!</string>
    <string name="dirtytweaks_dialog_message">Unfortunately we are not wizards!\n\nSo if you find a bug with any of these settings, please open up a ticket on Jira or contact a DU developer with the following.\n\n1. Logcat or Last_Kmsg\n2. Kernel and Mods used\n3. Useful information\n\nIf you fail to report something, do not expect things to be fixed. Remember, we are not wizards so we do miss things.</string>
    <string name="dirtytweaks_dialog_toast">READ THE WHOLE THING!</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="lockscreen_colors">Lockscreen Colors</string>
    <string name="lockscreen_bottom_icons_color">Lockscreen Bottom shortcuts</string>
    <string name="lockscreen_owner_info_color">Lockscreen Owner info text</string>
    <string name="lockscreen_alarm_color">Lockscreen Alarm text</string>
    <string name="lockscreen_indication_text_color">Lockscreen Indication text</string>
    <string name="lockscreen_clock_color">Lockscreen Clock</string>
    <string name="lockscreen_clock_date_color">Lockscreen Date</string>
    <string name="lockscreen_colors_reset_title">Reset lockscreen colors</string>
    <string name="lockscreen_colors_reset_message">Are you sure you want to reset these colors to default?</string>
    <string name="yes">YES</string>
    <string name="download_category">Download Center</string>
    <string name="gapps_title">Google Apps (GAPPS)</string>
    <string name="gapps_summary">List of GAPPS packages to flash in recovery</string>
    <string name="gapps_credit">Although GAPPS packages are not compiled from source and don\'t belong to nobody but Google, we would still like to take the time to thank a few individuals and team that maintain these packages for all of us and just make things easier for everyone.\n\nSpecial Thanks to Team BlackOut, Michael Banks, TKruzze and M. Wasif Chauhdary</string>
    <string name="powermenu_category">Power Menu</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide in secure lockscreen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="status_bar_show_unused_sims_title">Show empty SIM icons</string>
    <string name="status_bar_show_unused_sims_title_summary_off">Hide icons of unused SIM slots</string>
    <string name="status_bar_show_unused_sims_title_summary_on">Indicate unused SIM slots</string>
    <string name="traffic_category">Traffic Indicators</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_color_style">Color style</string>
    <string name="network_traffic_color_reset">Reset color</string>
    <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
    <string name="ok">OK</string>
    <string name="positive_done">Done</string>
    <string name="omniswitch_category">OmniSwitch</string>
    <string name="category_heads_up">Heads Up</string>
    <string name="summary_heads_up_enabled">Notifications are enabled</string>
    <string name="summary_heads_up_disabled">Notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_dnd_summary">Don\'t show heads up in these applications</string>
    <string name="add_heads_up_blacklist_summary">Don\'t show heads up from these applications</string>
    <string name="heads_up_dnd_title">Do not disturb</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="heads_up_disabled_notice">To allow applications to display interactive notifications in a pop-up window on your screen, enable Heads up.</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Notification will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_never_summary">Notification will show until it is dismissed</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_time_out_never">Never</string>
    <string name="hfm_disable_ads_title">Disable Ads</string>
    <string name="hfm_disable_ads_summary">Change hosts file to disable ads</string>
    <string name="hfm_pref_screen_title">Ad Blocker</string>
    <string name="hfm_update_hosts">Update hosts file</string>
    <string name="hfm_update_hosts_summary">Download and apply fresh hosts</string>
    <string name="hfm_dialog_wait">Working, please wait...</string>
    <string name="hfm_dialog_failed">Updating hosts file failed. Please try again.</string>
    <string name="hfm_dialog_success">/4 hosts sources successfully applied!</string>
    <string name="hfm_dialog_conn_error">Error: No network connectivity</string>
    <string name="misctweaks_category">Misc. Tweaks</string>
    <string name="double_tap_sleep_nav_bar_title">DT2S on Navbar</string>
    <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">DT2S on Statusbar</string>
    <string name="double_tap_to_sleep_summary">Double tap status bar to put the device to sleep</string>
    <string name="double_tap_sleep_anywhere_title">DT2S on Lockscreen</string>
    <string name="double_tap_sleep_anywhere_summary">Double tap lockscreen to put the device to sleep</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
    <string name="button_keys_title">Buttons</string>
    <string name="keys_bindings_title">Key actions</string>
    <string name="keys_enable_custom_title">Enable custom actions</string>
    <string name="keys_enable_custom_summary">Enable custom hardware key actions</string>
    <string name="keys_back_press_title">Back key</string>
    <string name="keys_back_long_press_title">Back key (long press)</string>
    <string name="keys_back_double_tap_title">Back key (double tap)</string>
    <string name="keys_home_press_title">Home key</string>
    <string name="keys_home_long_press_title">Home key (long press)</string>
    <string name="keys_home_double_tap_title">Home key (double tap)</string>
    <string name="keys_menu_press_title">Menu key</string>
    <string name="keys_menu_long_press_title">Menu key (long press)</string>
    <string name="keys_menu_double_tap_title">Menu key (double tap)</string>
    <string name="keys_assist_press_title">Search key</string>
    <string name="keys_assist_long_press_title">Search key (long press)</string>
    <string name="keys_assist_double_tap_title">Search key (double tap)</string>
    <string name="keys_app_switch_press_title">App switch key</string>
    <string name="keys_app_switch_long_press_title">App switch key (long press)</string>
    <string name="keys_app_switch_double_tap_title">App switch key (double tap)</string>
    <string name="keys_camera_press_title">Camera key</string>
    <string name="keys_camera_long_press_title">Camera key (long press)</string>
    <string name="keys_camera_double_tap_title">Camera key (double tap)</string>
    <string name="keys_action_normal">Normal press</string>
    <string name="keys_action_long">Long press</string>
    <string name="keys_action_double">Double tap</string>
    <string name="no_home_key">You have no button assigned any more to the \"Home\" action!\n\nThis can make your device unusable!</string>
    <string name="hardware_keys_disable_title">Disable keys</string>
    <string name="hardware_keys_disable_summary">Force disable hardware keys</string>
    <string name="haptic_feedback_disable_title">Disable Haptic feedback</string>
    <string name="shortcut_action_back">Back</string>
    <string name="shortcut_action_app">Custom app</string>
    <string name="disable_torch_screen_off_title">Disable torch on screen off</string>
    <string name="disable_torch_screen_off_delay_title">Delay</string>
    <string name="status_bar_brightness_control_title">Brightness control</string>
    <string name="status_bar_brightness_control_summary">Adjust brightness by sliding across status bar</string>
    <string name="status_bar_ticker_title">Notification Ticker</string>
    <string name="status_bar_ticker_summary">Scroll notification text in the statusbar.</string>
    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notifications</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="enable_task_manager_title">Task Manager</string>
    <string name="enable_task_manager_summary">Enable/Disable action for the task manager button in the expanded statusbar area</string>
</resources>