<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misctweaks_category" >

         <SwitchPreference
            android:key="disable_immersive_message"
            android:title="@string/disable_immersive_message_title"
            android:summary="@string/disable_immersive_message_summary"
            android:persistent="false" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="status_bar_show_show_ticker"
            android:title="@string/status_bar_ticker_title"
            android:summary="@string/status_bar_ticker_summary"
            android:defaultValue="false" />

         <SwitchPreference
            android:key="status_bar_brightness_control"
            android:summary="@string/status_bar_brightness_control_summary"
            android:title="@string/status_bar_brightness_control_title" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/double_tap_to_sleep_title"
            android:summary="@string/double_tap_to_sleep_summary"
            android:defaultValue="true" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_navbar"
            android:title="@string/double_tap_sleep_nav_bar_title"
            android:summary="@string/double_tap_sleep_nav_bar_summary"
            android:defaultValue="false" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="disable_fc_notifications"
            android:title="@string/disable_fc_notifications_title"
            android:summary="@string/disable_fc_notifications_summary" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="force_expanded_notifications"
            android:title="@string/force_expanded_notifications_title"
            android:summary="@string/force_expanded_notifications_summary" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="enable_task_manager"
            android:title="@string/enable_task_manager_title"
            android:summary="@string/enable_task_manager_summary" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="disable_torch_on_screen_off"
            android:title="@string/disable_torch_screen_off_title"
            android:defaultValue="false" />

         <ListPreference
            android:key="disable_torch_on_screen_off_delay"
            android:title="@string/disable_torch_screen_off_delay_title"
            android:dialogTitle="@string/disable_torch_screen_off_delay_title"
            android:entries="@array/torch_screen_off_delay_entries"
            android:entryValues="@array/torch_screen_off_delay_values"
            android:dependency="disable_torch_on_screen_off" />

    <PreferenceCategory
        android:title="@string/rr_lockscreen_title">

      <PreferenceScreen
         android:key="lockscreen_weather"
         android:title="@string/lock_screen_weather_settings_title"
         android:summary="@string/lock_screen_weather_settings_title_summary"
         android:fragment="com.android.settings.rr.LockScreenWeatherSettings" />

      <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
        android:key="long_press_lock_icon_to_sleep"
        android:title="@string/longpress_lock_icon_to_sleep_title"
        android:summary="@string/longpress_lock_icon_to_sleep_summary" />
            
      <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
        android:key="double_tap_sleep_anywhere"
        android:title="@string/double_tap_sleep_anywhere_title"
        android:summary="@string/double_tap_sleep_anywhere_summary" />
		
    </PreferenceCategory>

   <PreferenceCategory
        android:key="widgets"
        android:title="@string/widgets_category" >
          
      <PreferenceScreen
        android:key="lock_clock"
        android:title="@string/lock_clock_title"
        android:summary="@string/lock_clock_summary">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.cyanogenmod.lockclock"
            android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
        </PreferenceScreen>

  </PreferenceCategory>
</PreferenceScreen>

